syntax = "proto3";

package fluffy;

option java_package = "com.proto.fluffy";
option java_multiple_files = true;

message ChunkInfo {
    string key = 1;
    bytes data = 2;
    bool isEnd = 3;
    int32 uploadId = 4;
    int32 len = 5;
}

message sendChunkRequest {
    ChunkInfo chunkInfo = 1;
}

message sendChunkResponse {
	string response = 1;
}

message getUploadIdRequest {
}

message getUploadIdResponse {
	int32 uploadId = 1;
}

service DataService {
    rpc GetUploadId(getUploadIdRequest) returns (getUploadIdResponse){};
    rpc SendChunk(sendChunkRequest) returns (sendChunkResponse){};
}
